--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I don't quite exist yet. Please wait a bit while I am growing.</p>
 </body>
 </html>
